--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -229,8 +229,8 @@
 		<Translation>Handelsnetzwerk</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_CONCEPT_TRIBE_INVADE</zType>
-		<Translation>Stämme Einfall</Translation>
+		<zType>TEXT_CONCEPT_TRIBE_INVASION</zType>
+		<Translation>Stämme Invasion</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CONCEPT_UNDO</zType>
